--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   countries_utils: ^1.0.1
   azlistview: ^2.0.0
   flutter_rating_bar: ^4.0.1
+  flutter_svg: ^2.0.7
+
   # persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
